# django-extended-choices

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  requirements-dev.txt  requirements-makedoc.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/modules/: choices.rst  fields.rst  helpers.rst
extended_choices/: __init__.py  __main__.py  choices.py  fields.py  helpers.py  tests.py
