[metadata]
name = django-extended-choices
version = 1.3.3
author = Stephane "Twidi" Angel
author_email = s.angel@twidi.com
url = https://github.com/twidi/django-extended-choices
description = Little helper application to improve django choices (for fields)
long_description = file: README.rst
license = BSD
license_file = LICENSE
keywords = redis, orm, jobs, queue
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
packages = extended_choices
install_requires =
    six
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.extras_require]
dev =
    django
doc =
    django
    sphinx
    sphinxcontrib-napoleon
    sphinx_rtd_theme

[bdist_wheel]
universal = 1
